arreglo tarea 3 y 4 Fermin Perez

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h3>redes</h3>
 </footer>
 <script src="/js/variables.js"></script>
-<script src="/js/funciones.js"></script>
+<script src="/js/funcion.js"></script>
     <script src="/js/main.js"></script>
 
 </body>
