--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>EVA HOME</h1>
-        <ol>
+        <!-- <ol>
             <li><a href="">inicio</a></li>
             <li><a href="">nosotros</a></li>
             <li><a href="">productos</a></li>
@@ -28,9 +28,9 @@
     <h3>redes</h3>
     <h3>redes</h3>
     <h3>redes</h3>
-</footer>
-<script src="/js/variables.js"></script>
-<script src="/js/funcion.js"></script>
+</footer> -->
+<!-- <script src="/js/variables.js"></script>
+<script src="/js/funcion.js"></script> -->
     <script src="/js/main.js"></script>
 
 </body>
